--- a/common/etc/nginx/sites-enabled/20-auto-domains.conf
+++ b/common/etc/nginx/sites-enabled/20-auto-domains.conf
@@ -2,7 +2,7 @@ server {
     listen *:80;
     server_name ~^(www\.)?(?<domain>.+)$;
 
-    root /var/www/$domain/web;
+    root /var/www/$domain/public;
 
     location / {
         proxy_pass http://127.0.0.1:88/;
@@ -12,7 +12,7 @@ server {
     location ~* \.(jpg|jpeg|gif|png|ico|css|less|js|txt|doc|docx|xls|xlsx|ppt|pptx|zip|rar|7z|iso)$ {
         access_log off;
         expires 30d;
-        root /var/www/$domain/web;
+        root /var/www/$domain/public;
     }
 
     access_log /var/log/nginx/${domain}_access.log;
